# fullstack-rust-app

./: .gitignore  Cargo.toml  Dockerfile.backend  Makefile  README.md  docker-compose.yaml  reverse.md
app/backend/: Cargo.toml
app/backend/src/: connect_db.rs  main.rs
app/frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
app/frontend/src/: main.rs
app/frontend/src/components/: layout.rs  topbar.rs  usermenu.rs
app_config/: Cargo.toml
app_config/src/: error_response.rs  lib.rs  logo.rs
auth/auth_api/: Cargo.toml
auth/auth_api/src/: lib.rs
auth/auth_app/: Cargo.toml
auth/auth_app/src/: handlers.rs  lib.rs  services.rs  session_store.rs  user_guard.rs  user_session.rs
auth/auth_cli/: Cargo.toml
auth/auth_cli/src/: main.rs
auth/auth_screens/: Cargo.toml
auth/auth_screens/src/: lib.rs
auth/auth_screens/src/components/: login_required.rs  mod.rs  privileges_required.rs
auth/auth_screens/src/store/: actions.rs  mod.rs  state.rs
auth_password/auth_password_api/: Cargo.toml
auth_password/auth_password_api/src/: lib.rs
auth_password/auth_password_app/: Cargo.toml
auth_password/auth_password_app/src/: handlers.rs  lib.rs  services.rs
auth_password/auth_password_screens/: Cargo.toml
auth_password/auth_password_screens/src/: lib.rs
auth_password/auth_password_screens/src/components/: layout.rs  login.rs  login_form.rs  mod.rs  signup.rs  signup_form.rs  thank_you.rs
migrations/: 20240702183721_create_auth_users_table.sql  20240704214315_create_auth_passwords_table.sql  20240706063530_create_wallets_table.sql
wallet/wallet_api/: Cargo.toml
wallet/wallet_api/src/: lib.rs  transaction.rs  wallet.rs
wallet/wallet_app/: Cargo.toml
wallet/wallet_app/src/: handlers.rs  lib.rs  services.rs
wallet/wallet_screens/: Cargo.toml
wallet/wallet_screens/src/: lib.rs
wallet/wallet_screens/src/components/common/: mod.rs  qr_code.rs  transaction_table.rs
wallet/wallet_screens/src/components/dashboard/: balance_card.rs  mod.rs  recent_transactions.rs  wallet_details.rs  wallet_security.rs
wallet/wallet_screens/src/components/setup/: mod.rs  setup_form.rs
wallet/wallet_screens/src/components/transactions/: mod.rs
wallet/wallet_screens/src/components/transfer/: mod.rs  receive_form.rs  send_form.rs
wallet/wallet_screens/src/services/crypto/: mod.rs
wallet/wallet_screens/src/services/transactions/: events.rs  manager.rs  mod.rs  status.rs  worker.rs
wallet/wallet_screens/src/store/: actions.rs  mod.rs  state.rs  wallet_load_save.rs
wallet/wallet_screens/src/store/operations/: load_wallet.rs  mod.rs  refresh_balance.rs
