[workspace]
members = [
  "app/backend",
  "app/frontend",
  "app_config",
  "auth/auth_api",
  "auth/auth_app",
  "auth/auth_cli",
  "auth/auth_screens",
  "auth_password/auth_password_api",
  "auth_password/auth_password_app",
  "auth_password/auth_password_screens",
  "wallet/wallet_api",
  "wallet/wallet_app",
  "wallet/wallet_screens",
]
resolver = "2"

[workspace.dependencies]
argon2 = "0.5.0"
yewdux = "0.10.0"
rmp-serde = "1.3"
futures = "0.3.26"
tower = "0.4.13"
serde_json = { version = "1.0.111", features = ["raw_value"] }
thiserror = "1.0.56"
tower-sessions-core = "0.13.0"
chrono-humanize = "0.2.3"
rustls = "0.23.12"
serde_yaml = "0.9.25"
anyhow = "1.0.89"
tower-sessions-sqlx-store = "0.14.0"
gloo-timers = "0.3.0"
gloo-console = "0.3.0"
tower-cookies = "0.10.0"
wasm-bindgen-futures = "0.4.40"
async-trait = "0.1.83"
gloo-utils = "0.2.0"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.18"
env_logger = "0.11.1"
base64 = "0.21.0"
tracing = "0.1"
time = { version = "0.3.36", features = ["serde"] }
ethers = "2.0.14"
log = "0.4.20"
password-hash = "0.5.0"
yew-router = "0.18.0"
rust_decimal = { version = "1.34.3", features = ["serde-str"] }
rust_decimal_macros = "1.34"
yew = { version = "0.21", features = ["csr"] }
clap = { version = "4.5.8", features = ["derive"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
rand_core = { version = "0.6.3", features = ["std"] }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

web-sys = { version = "0.3.68", features = [
  "HtmlElement",
  "Document",
  "HtmlDocument",
  "Window",
  "Element",
  "IntersectionObserver",
  "CssStyleDeclaration",

  "DragEvent",
  "ResizeObserver",
  "CustomEvent",
  "Navigator",
  "MutationObserver",
  "MediaDevices",
  "DomTokenList",
  "DomRect",
  "CustomEventInit",
  "HtmlStyleElement",
  "HtmlVideoElement",
  "DataTransfer",
  "Document",
  "Clipboard",
  "MediaStreamTrack",
  "HtmlDivElement",
  "HtmlLinkElement",
  "MediaTrackConstraints",
  "MediaStream",
] }

[workspace.dependencies.utoipa]
version = "5.1.3"
features = ["chrono", "uuid", "axum_extras", "rc_schema", "decimal"]

[workspace.dependencies.tower-sessions]
version = "0.13.0"
features = ["signed"]

[workspace.dependencies.chrono]
version = "0.4.23"
features = ["serde", "wasmbind"]

[workspace.dependencies.wasm-bindgen]
version = "0.2.90"
features = ["serde-serialize"]

[workspace.dependencies.tower-http]
version = "0.5.0"
features = ["cors"]


[workspace.dependencies.axum-extra]
version = "0.9.2"
features = [
  "erased-json",
  "query",
  "multipart",
  "cookie",
  "async-read-body",
  "cookie-key-expansion",
  "typed-header",
  "form",
  "cookie-private",
  "json-lines",
  "protobuf",
  "json-deserializer",
  "typed-routing",
  "cookie-signed",
]

[workspace.dependencies.serde]
version = "1.0.195"
features = ["derive"]

[workspace.dependencies.sqlx]
version = "0.8.2"
features = [
  "migrate",
  "tls-rustls",
  "postgres",
  "runtime-tokio",
  "chrono",
  "runtime-async-std-rustls",
  "uuid",
  "rust_decimal",
  "macros",
]
default-features = false

[workspace.dependencies.serde_with]
version = "3.11.0"
features = ["chrono", "macros", "std"]

[workspace.dependencies.redis]
version = "0.24.0"
features = ["tokio-comp"]

[workspace.dependencies.reqwest]
version = "0.12.2"
features = ["json", "stream", "rustls-tls", "multipart"]
default-features = false

[workspace.dependencies.axum]
version = "0.7.4"
features = ["macros", "tokio"]

[workspace.dependencies.wonopui]
version = "0.0.5"
features = ["everything", "ThemeProvider"]

[workspace.dependencies.lapin]
version = "2.5.0"
default-features = false

[workspace.dependencies.tokio]
version = "1.36.0"
features = ["full"]

[workspace.dependencies.validator]
version = "0.16.0"
features = ["derive"]

[workspace.package]
edition = "2021"
