[package]
name = "backend"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
axum-extra = { workspace = true }
tower = { workspace = true }
log = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
auth_app = { path = "../../auth/auth_app" }
auth_password_app = { path = "../../auth_password/auth_password_app" }
time = { workspace = true }

wallet_app = { path = "../../wallet/wallet_app" }
sqlx = { workspace = true }
tower-sessions = { workspace = true }
base64 = { workspace = true }
