[package]
name = "frontend"
version = "0.1.0"
edition.workspace = true

[dependencies]
web-sys = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yewdux = { workspace = true }
app_config = { path = "../../app_config" }
wallet_screens = { path = "../../wallet/wallet_screens" }
auth_screens = { path = "../../auth/auth_screens" }
auth_password_screens = { path = "../../auth_password/auth_password_screens" }
wonopui = { workspace = true }
