[package]
name = "auth_api"
version = "0.1.0"
edition.workspace = true

[features]
backend = ["dep:sqlx", "dep:axum", "dep:async-trait", "dep:anyhow"]

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
