[package]
name = "auth_screens"
version = "0.1.0"
edition.workspace = true

[dependencies]
web-sys = { workspace = true }
yew = { workspace = true }
yewdux = { workspace = true }
yew-router = { workspace = true }
serde = { workspace = true }
gloo-console = { workspace = true }
reqwest = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wonopui = { workspace = true }
log = { workspace = true }

app_config = { path = "../../app_config" }
auth_api = { path = "../auth_api" }
