[package]
name = "auth_password_api"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true, optional = true }
auth_api = { path = "../../auth/auth_api" }
validator = { workspace = true }


[features]
backend = ["auth_api/backend", "dep:sqlx"]
