[package]
name = "auth_password_app"
version = "0.1.0"
edition.workspace = true

[dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
log = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-cookies = { workspace = true }
axum-extra = { workspace = true }
sqlx = { workspace = true }
argon2 = { workspace = true }
password-hash = { workspace = true }
auth_api = { path = "../../auth/auth_api", features = ["backend"] }
auth_app = { path = "../../auth/auth_app" }
auth_password_api = { path = "../../auth_password/auth_password_api", features = [
    "backend",
] }
app_config = { path = "../../app_config", features = ["backend"] }
tower-sessions = { workspace = true }
