[package]
name = "auth_password_screens"
version = "0.1.0"
edition.workspace = true

[dependencies]
auth_screens = { path = "../../auth/auth_screens" }
auth_api = { path = "../../auth/auth_api" }
auth_password_api = { path = "../auth_password_api" }
app_config = { path = "../../app_config" }

wonopui = { workspace = true }
web-sys = { workspace = true }
yew = { workspace = true }
yewdux = { workspace = true }
yew-router = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
gloo-console = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
reqwest = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[features]
source = []
